--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -52,7 +52,8 @@ dev_dependencies:
   build_runner: ^2.3.3
   drift_dev: ^2.5.1
   mockito: ^5.4.0
-
+  cool_alert: ^2.0.1
+awesome_notifications: ^0.7.4+1
 flutter:
   uses-material-design: true
   assets:
