--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -19,7 +19,6 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
-  flutter_local_notifications: ^13.0.0
   flutter_svg: null
   fluttermoji: ^1.0.1
   google_sign_in: ^6.0.1
@@ -44,6 +43,10 @@ dependencies:
   get: ^4.6.5
   get_storage:
   custom_search_bar: ^0.0.3
+  cool_alert: ^2.0.1
+  awesome_notifications: ^0.7.4+1
+  flutter_ringtone_player: ^3.2.0
+  connectivity_plus: ^4.0.2
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
@@ -52,8 +55,7 @@ dev_dependencies:
   build_runner: ^2.3.3
   drift_dev: ^2.5.1
   mockito: ^5.4.0
-  cool_alert: ^2.0.1
-awesome_notifications: ^0.7.4+1
+
 flutter:
   uses-material-design: true
   assets:
