--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "build": "npx tsc --watch",
+    "start": "node build/index.js",
+    "postinstall": "npm run build"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.18",
@@ -28,10 +32,7 @@
     "firebase-admin": "^11.5.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
-    "moment": "^2.29.4",
     "mongoose": "^6.9.0",
-    "openai": "^3.1.0",
-    "socket.io": "^4.5.4",
     "ws": "^8.12.0"
   }
 }
